# P403n1x87-austin

./: .clang-format  .gitignore  .travis.yml  ChangeLog  Dockerfile  README.md  configure.ac
.github/workflows/: benchmarks.yml  build_arch.yml  checks.yml  docker.yml  pre_release.yml  pre_release_arch.yml  release.yml  release_arch.yml  tests.yml  validation.yml
austin/: apm.py
choco/: austin.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
doc/: examples.troff
scripts/: benchmark.py  build-wheel.py  build_arch.sh  common.py  errors.py  format.sh  requirements-bm.txt  requirements-val.txt  stats.py  validation.py
snap/: snapcraft.yaml
src/: Makefile.am  ansi.h  argparse.c  argparse.h  austin.1  austin.c  austin.h  bin.h  cache.c  cache.h  code.h  env.c  env.h  error.c  error.c.template  error.h  error.h.template  events.c  events.h  frame.h  hints.h  logging.c  logging.h  mem.h  mojo.h  msg.h  platform.c  platform.h  py_interp.h  py_proc.c  py_proc.h  py_proc_list.c  py_proc_list.h  py_string.h  py_thread.c  py_thread.h  resources.h  stack.c  stack.h  stats.c  (+4 more)
src/linux/: addr2line.h  analyze_elf.h  common.h  futils.h  py_proc.h  py_thread.h  vm-range-tree.h
src/linux/proc/: exe.h  maps.h
src/mac/: py_proc.h  py_thread.h
src/python/: abi.h  ceval.h  cframe.h  code.h  frame.h  gc.h  gil.h  iframe.h  interp.h  misc.h  object.h  runtime.h  string.h  symbols.h  thread.h
src/win/: py_proc.h  py_thread.h
test/: __init__.py  error.py  error.py.template  requirements.txt  server.py  utils.py
test/cunit/: __init__.py  argparse.py  cache.py  conftest.py  env.py  test_argparse.py  test_env.py  test_error.py  test_platform.py  test_stats.py
test/functional/: test_attach.py  test_cli.py  test_fork.py  test_gc.py  test_mojo.py  test_pipe.py
test/integrity/: test_accuracy.py  test_valgrind.py
test/support/: test_uwsgi.py
test/targets/: notpython.c  target_exec.py
wix/: Austin.wxs
